// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdk-constructs BundledLambda with minimal configuration builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "id_log-doc_CF88F1C2": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.id_logs_A5878EE1.arn}"
            ]
          }
        ]
      },
      "id_role_assume_AD51AF17": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "id_role-partition_A9481A3C": {
      }
    },
    "aws_region": {
      "region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "id_logs_A5878EE1": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "id_alarm_9DA036EF": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "id_role_new_6882EA3E": {
        "assume_role_policy": "\${data.aws_iam_policy_document.id_role_assume_AD51AF17.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "id_policy_5819D0AF": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.id_log-doc_CF88F1C2.json}",
        "role": "\${aws_iam_role.id_role_new_6882EA3E.arn}"
      }
    },
    "aws_lambda_function": {
      "id_fn_BC9D0F34": {
        "depends_on": [
          "aws_cloudwatch_log_group.id_logs_A5878EE1"
        ],
        "function_name": "my-function",
        "handler": "index.handler",
        "memory_size": 128,
        "role": "\${aws_iam_role.id_role_new_6882EA3E.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "my-bucket",
        "s3_key": "some/key.zip",
        "timeout": 300
      }
    }
  }
}"
`;

exports[`cdk-constructs DockerLambda with maximal configuration builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "id_log-doc_CF88F1C2": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.id_logs_A5878EE1.arn}"
            ]
          }
        ]
      }
    },
    "aws_iam_role": {
      "id_role_external_BA4DD1A9": {
        "name": "role-name"
      }
    },
    "aws_region": {
      "region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "id_logs_A5878EE1": {
        "kms_key_id": "arn:aws:service:us-west-2:123456789012:entity",
        "name": "/aws/lambda/my-function",
        "retention_in_days": 7,
        "skip_destroy": false,
        "tags": {
          "tag": "value"
        }
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "id_alarm_9DA036EF": {
        "actions_enabled": true,
        "alarm_actions": [
          "arn:aws:service:us-west-2:123456789012:entity"
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.region.name}",
        "comparison_operator": "GreaterThanOrEqualToThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 2,
        "insufficient_data_actions": [
          "arn:aws:service:us-west-2:123456789012:entity"
        ],
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "ok_actions": [
          "arn:aws:service:us-west-2:123456789012:entity"
        ],
        "period": 120,
        "statistic": "Average",
        "tags": {
          "tag": "value"
        },
        "threshold": 10,
        "treat_missing_data": "missing"
      }
    },
    "aws_iam_role_policy": {
      "id_policy_5819D0AF": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.id_log-doc_CF88F1C2.json}",
        "role": "\${data.aws_iam_role.id_role_external_BA4DD1A9.arn}"
      },
      "id_role_user_6870A479": {
        "name": "user-permissions-role",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"s3:*\\",\\"Resource\\":\\"arn:aws:service:us-west-2:123456789012:entity\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${data.aws_iam_role.id_role_external_BA4DD1A9.arn}"
      }
    },
    "aws_lambda_function": {
      "id_fn_BC9D0F34": {
        "architectures": [
          "x86_64"
        ],
        "code_signing_config_arn": "arn:aws:service:us-west-2:123456789012:entity",
        "dead_letter_config": {
          "target_arn": "arn:aws:service:us-west-2:123456789012:entity"
        },
        "depends_on": [
          "aws_cloudwatch_log_group.id_logs_A5878EE1"
        ],
        "description": "described",
        "environment": {
          "variables": {
            "KEY": "value"
          }
        },
        "ephemeral_storage": {
          "size": 512
        },
        "file_system_config": {
          "arn": "arn:aws:service:us-west-2:123456789012:entity",
          "local_mount_path": "/mnt/something"
        },
        "function_name": "my-function",
        "image_config": {
          "command": [
            "foo"
          ],
          "entry_point": [
            "bar"
          ],
          "working_directory": "baz"
        },
        "image_uri": "public.ecr.aws/lambda/provided:al2",
        "kms_key_arn": "arn:aws:service:us-west-2:123456789012:entity",
        "layers": [
          "arn:aws:service:us-west-2:123456789012:entity"
        ],
        "memory_size": 512,
        "package_type": "Image",
        "publish": false,
        "replace_security_groups_on_destroy": false,
        "replacement_security_group_ids": [
          "sg-7ca1556d"
        ],
        "reserved_concurrent_executions": -1,
        "role": "\${data.aws_iam_role.id_role_external_BA4DD1A9.arn}",
        "skip_destroy": false,
        "tags": {
          "tag": "value"
        },
        "timeout": 3,
        "tracing_config": {
          "mode": "Active"
        }
      }
    }
  }
}"
`;

exports[`cdk-constructs DockerLambda with minimal configuration builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "id_log-doc_CF88F1C2": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.id_logs_A5878EE1.arn}"
            ]
          }
        ]
      },
      "id_role_assume_AD51AF17": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "id_role-partition_A9481A3C": {
      }
    },
    "aws_region": {
      "region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "id_logs_A5878EE1": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "id_alarm_9DA036EF": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "id_role_new_6882EA3E": {
        "assume_role_policy": "\${data.aws_iam_policy_document.id_role_assume_AD51AF17.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "id_policy_5819D0AF": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.id_log-doc_CF88F1C2.json}",
        "role": "\${aws_iam_role.id_role_new_6882EA3E.arn}"
      }
    },
    "aws_lambda_function": {
      "id_fn_BC9D0F34": {
        "depends_on": [
          "aws_cloudwatch_log_group.id_logs_A5878EE1"
        ],
        "function_name": "my-function",
        "image_uri": "public.ecr.aws/lambda/provided:al2",
        "memory_size": 128,
        "package_type": "Image",
        "role": "\${aws_iam_role.id_role_new_6882EA3E.arn}",
        "timeout": 300
      }
    }
  }
}"
`;

exports[`cdk-constructs EcrDockerLambda with gitsha builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "id_log-doc_CF88F1C2": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.id_logs_A5878EE1.arn}"
            ]
          }
        ]
      },
      "id_repo_repo-doc_FA876B4C": {
        "statement": [
          {
            "actions": [
              "ecr:BatchGetImage",
              "ecr:GetDownloadUrlForLayer"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "id_role_assume_AD51AF17": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "id_role-partition_A9481A3C": {
      }
    },
    "aws_region": {
      "region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "id_logs_A5878EE1": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "id_alarm_9DA036EF": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_ecr_repository": {
      "id_repo_4AFBB471": {
        "name": "my-function"
      }
    },
    "aws_ecr_repository_policy": {
      "id_repo_repo-policy_AA019073": {
        "policy": "\${data.aws_iam_policy_document.id_repo_repo-doc_FA876B4C.json}",
        "repository": "\${aws_ecr_repository.id_repo_4AFBB471.name}"
      }
    },
    "aws_iam_role": {
      "id_role_new_6882EA3E": {
        "assume_role_policy": "\${data.aws_iam_policy_document.id_role_assume_AD51AF17.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "id_policy_5819D0AF": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.id_log-doc_CF88F1C2.json}",
        "role": "\${aws_iam_role.id_role_new_6882EA3E.arn}"
      }
    },
    "aws_lambda_function": {
      "id_fn_BC9D0F34": {
        "depends_on": [
          "aws_cloudwatch_log_group.id_logs_A5878EE1"
        ],
        "function_name": "my-function",
        "image_uri": "\${aws_ecr_repository.id_repo_4AFBB471.repository_url}:123abc",
        "memory_size": 128,
        "package_type": "Image",
        "role": "\${aws_iam_role.id_role_new_6882EA3E.arn}",
        "timeout": 300
      }
    }
  }
}"
`;

exports[`cdk-constructs EcrDockerLambda with minimal configuration builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "id_repo_repo-doc_FA876B4C": {
        "statement": [
          {
            "actions": [
              "ecr:BatchGetImage",
              "ecr:GetDownloadUrlForLayer"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "id_role-partition_A9481A3C": {
      }
    },
    "aws_region": {
      "region": {
      }
    }
  },
  "resource": {
    "aws_ecr_repository": {
      "id_repo_4AFBB471": {
        "name": "my-function"
      }
    },
    "aws_ecr_repository_policy": {
      "id_repo_repo-policy_AA019073": {
        "policy": "\${data.aws_iam_policy_document.id_repo_repo-doc_FA876B4C.json}",
        "repository": "\${aws_ecr_repository.id_repo_4AFBB471.name}"
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda inVPC method builds in looked up VPC 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_log-doc_9434393F": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_logs_A567E0ED.arn}"
            ]
          }
        ]
      },
      "my-function_role_assume_9248D456": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_role-partition_240AEE8B": {
      }
    },
    "aws_region": {
      "region": {
      }
    },
    "aws_security_groups": {
      "my-function_sgs_2F698D33": {
        "filter": [
          {
            "name": "vpc-id",
            "values": [
              "vpc-6905200c"
            ]
          }
        ]
      }
    },
    "aws_subnet_ids": {
      "my-function_subnets_5C0A22E2": {
        "vpc_id": "vpc-6905200c"
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_logs_A567E0ED": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_alarm_E011EE05": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_role_new_0965544D": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_role_assume_9248D456.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_policy_05AEED31": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_log-doc_9434393F.json}",
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_fn_E1D3A6DF": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_logs_A567E0ED"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}",
        "timeout": 300,
        "vpc_config": {
          "security_group_ids": "\${data.aws_security_groups.my-function_sgs_2F698D33.ids}",
          "subnet_ids": "\${tolist(data.aws_subnet_ids.my-function_subnets_5C0A22E2.ids)}"
        }
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda inVPC method builds in specific subnets 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_log-doc_9434393F": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_logs_A567E0ED.arn}"
            ]
          }
        ]
      },
      "my-function_role_assume_9248D456": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_role-partition_240AEE8B": {
      }
    },
    "aws_region": {
      "region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_logs_A567E0ED": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_alarm_E011EE05": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_role_new_0965544D": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_role_assume_9248D456.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_policy_05AEED31": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_log-doc_9434393F.json}",
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_fn_E1D3A6DF": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_logs_A567E0ED"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}",
        "timeout": 300,
        "vpc_config": {
          "security_group_ids": [
            "sg-7ca1556d"
          ],
          "subnet_ids": [
            "subnet-362d0717"
          ]
        }
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda inVPC method builds on default VPC 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_log-doc_9434393F": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_logs_A567E0ED.arn}"
            ]
          }
        ]
      },
      "my-function_role_assume_9248D456": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_role-partition_240AEE8B": {
      }
    },
    "aws_region": {
      "region": {
      }
    },
    "aws_security_groups": {
      "my-function_sgs_2F698D33": {
        "filter": [
          {
            "name": "vpc-id",
            "values": [
              "\${data.aws_vpc.my-function_vpc_98ADECDA.id}"
            ]
          }
        ]
      }
    },
    "aws_subnet_ids": {
      "my-function_subnets_5C0A22E2": {
        "vpc_id": "\${data.aws_vpc.my-function_vpc_98ADECDA.id}"
      }
    },
    "aws_vpc": {
      "my-function_vpc_98ADECDA": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_logs_A567E0ED": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_alarm_E011EE05": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_role_new_0965544D": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_role_assume_9248D456.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_policy_05AEED31": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_log-doc_9434393F.json}",
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_fn_E1D3A6DF": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_logs_A567E0ED"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}",
        "timeout": 300,
        "vpc_config": {
          "security_group_ids": "\${data.aws_security_groups.my-function_sgs_2F698D33.ids}",
          "subnet_ids": "\${tolist(data.aws_subnet_ids.my-function_subnets_5C0A22E2.ids)}"
        }
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda with bare minimal required configuration builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_log-doc_9434393F": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_logs_A567E0ED.arn}"
            ]
          }
        ]
      },
      "my-function_role_assume_9248D456": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_role-partition_240AEE8B": {
      }
    },
    "aws_region": {
      "region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_logs_A567E0ED": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_alarm_E011EE05": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_role_new_0965544D": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_role_assume_9248D456.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_policy_05AEED31": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_log-doc_9434393F.json}",
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_fn_E1D3A6DF": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_logs_A567E0ED"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}",
        "timeout": 300
      }
    }
  }
}"
`;

exports[`cdk-constructs Lambda with s3 package specified builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-function_log-doc_9434393F": {
        "statement": [
          {
            "actions": [
              "logs:*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_cloudwatch_log_group.my-function_logs_A567E0ED.arn}"
            ]
          }
        ]
      },
      "my-function_role_assume_9248D456": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "my-function_role-partition_240AEE8B": {
      }
    },
    "aws_region": {
      "region": {
      }
    }
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "my-function_logs_A567E0ED": {
        "name": "/aws/lambda/my-function",
        "retention_in_days": 14
      }
    },
    "aws_cloudwatch_metric_alarm": {
      "my-function_alarm_E011EE05": {
        "alarm_actions": [
        ],
        "alarm_description": "Error alarm for the my-function Lambda function",
        "alarm_name": "lambda-errors-my-function-\${data.aws_region.region.name}",
        "comparison_operator": "GreaterThanThreshold",
        "datapoints_to_alarm": 1,
        "dimensions": {
          "FunctionName": "my-function"
        },
        "evaluation_periods": 5,
        "metric_name": "Errors",
        "namespace": "AWS/Lambda",
        "period": 60,
        "statistic": "Sum",
        "threshold": 0,
        "treat_missing_data": "notBreaching"
      }
    },
    "aws_iam_role": {
      "my-function_role_new_0965544D": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-function_role_assume_9248D456.json}",
        "name": "lambda-role-my-function"
      }
    },
    "aws_iam_role_policy": {
      "my-function_policy_05AEED31": {
        "name": "lambda-logging-my-function",
        "policy": "\${data.aws_iam_policy_document.my-function_log-doc_9434393F.json}",
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}"
      }
    },
    "aws_lambda_function": {
      "my-function_fn_E1D3A6DF": {
        "depends_on": [
          "aws_cloudwatch_log_group.my-function_logs_A567E0ED"
        ],
        "function_name": "my-function",
        "memory_size": 128,
        "role": "\${aws_iam_role.my-function_role_new_0965544D.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "my-bucket",
        "s3_key": "key/something.zip",
        "timeout": 300
      }
    }
  }
}"
`;

exports[`cdk-constructs Repository with minimal configuration allowing lambda access builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-role_my-role-doc_8CB0B572": {
        "statement": [
          {
            "actions": [
              "ecr:BatchGetImage",
              "ecr:GetDownloadUrlForLayer"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "lambda.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_ecr_repository": {
      "my-role_FA4855CE": {
        "name": "my-repo"
      }
    },
    "aws_ecr_repository_policy": {
      "my-role_my-role-policy_516BBFB1": {
        "policy": "\${data.aws_iam_policy_document.my-role_my-role-doc_8CB0B572.json}",
        "repository": "\${aws_ecr_repository.my-role_FA4855CE.name}"
      }
    }
  }
}"
`;

exports[`cdk-constructs Role with minimal configuration a new role builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-role_assume_5702DF20": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:aws:iam::1234567890:user/chuck"
                ],
                "type": "AWS"
              }
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_iam_role": {
      "my-role_new_FBA59218": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-role_assume_5702DF20.json}",
        "name": "new-role"
      }
    }
  }
}"
`;

exports[`cdk-constructs Role with minimal configuration an existing role builds 1`] = `
"{
  "data": {
    "aws_iam_role": {
      "my-role_external_8FC3D7F6": {
        "name": "developer"
      }
    }
  }
}"
`;

exports[`cdk-constructs Role with policy statements a new role builds 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "my-role_assume_5702DF20": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "arn:aws:iam::1234567890:user/chuck"
                ],
                "type": "AWS"
              }
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_iam_role": {
      "my-role_new_FBA59218": {
        "assume_role_policy": "\${data.aws_iam_policy_document.my-role_assume_5702DF20.json}",
        "name": "new-role"
      }
    },
    "aws_iam_role_policy": {
      "my-role_user_D2BB11EC": {
        "name": "user-permissions-my-role",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"s3:*\\",\\"Resource\\":\\"arn:aws:service:us-west-2:123456789012:entity\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.my-role_new_FBA59218.arn}"
      }
    }
  }
}"
`;

exports[`cdk-constructs Role with policy statements an existing role builds 1`] = `
"{
  "data": {
    "aws_iam_role": {
      "my-role_external_8FC3D7F6": {
        "name": "developer"
      }
    }
  },
  "resource": {
    "aws_iam_role_policy": {
      "my-role_user_D2BB11EC": {
        "name": "user-permissions-my-role",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"s3:*\\",\\"Resource\\":\\"arn:aws:service:us-west-2:123456789012:entity\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${data.aws_iam_role.my-role_external_8FC3D7F6.arn}"
      }
    }
  }
}"
`;
